@@ -1,5 +1,5 @@
 /*
-Copyright (C) 2001 The Exult Team
+Copyright (C) 2001-2010 The Exult Team
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
@@ -33,6 +33,9 @@ bool Jawbone_object::add
 	bool noset		// True to prevent actors from setting sched. weapon.
 	)
 {
+	if (Container_game_object::find_item(obj->get_shapenum(),
+			c_any_qual, obj->get_framenum()))	// same tooth?
+		return false;
 	if (!Container_game_object::add(obj, dont_check, combine))
 		return false; // Can't be added to.
 
